--- a/frontend/finstagram/package.json
+++ b/frontend/finstagram/package.json
@@ -21,6 +21,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-window": "^1.8.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
